# update-macports

./: .gitignore  Makefile.in  README.md  configure  configure.ac
src/etc/cron.daily/: update-macports
